Fix loading plugins when directory has spaces