@@ -117,7 +117,10 @@ public class SonarLintEngineFactory extends ApplicationComponent.Adapter {
     try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(Paths.get(pluginsDir.toURI()), "*.jar")) {
       for (Path path : directoryStream) {
         globalLogOutput.log("Found plugin: " + path.getFileName().toString(), LogOutput.Level.DEBUG);
-        pluginsUrls.add(path.toUri().toURL());
+
+        // any attempt to convert path directly to URL or URI will result in having spaces double escaped
+        URL newUrl = new URL(pluginsDir, path.toString());
+        pluginsUrls.add(newUrl);
       }
     }
     return pluginsUrls.toArray(new URL[pluginsUrls.size()]);
